Use voila-material
Signed-off-by: martinRenou <martin.renou@gmail.com>

--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,9 @@
 name: voila-gallery-render-stl
 channels:
-- conda-forge
+  - conda-forge
 dependencies:
-- ipyvolume=0.5.2
-- ipywidgets=7.5.0
-- numpy-stl=2.10.1
-- voila=0.1.6
-
+  - ipyvolume=0.5.2
+  - ipywidgets=7.5.0
+  - numpy-stl=2.10.1
+  - voila=0.1.20
+  - voila-material
